syntax = "proto3";

option java_package = "proto";
option java_multiple_files = true;

message User {
    string id = 1;
    string name = 2;
}

message Room {
    string id = 1;
    string name = 2;
    repeated User members = 3;
}

/* SIGNALING INTENTS */

message CreateRoomIntent {
    string room_name = 1;
}

message JoinRoomIntent {
    string room_id = 1;
}

message LeaveRoomIntent {
    string room_id = 1;
}

message SendMessageIntent {
    string data = 1;
}

message SignalingIntent {
    oneof intent {
        CreateRoomIntent create_room = 1;
        JoinRoomIntent join_room = 2;
        LeaveRoomIntent leave_room = 3;
        SendMessageIntent send_message = 4;
    }
}

/* SIGNALING EVENTS */

message RoomsInfoEvent {
    repeated Room list = 1;
}

message RoomAddedEvent {
    string id = 1;
    string name = 2;
}

message RoomRemovedEvent {
    string id = 1;
}

message RoomCreatedEvent {
    string id = 1;
    string name = 2;
}

message RoomNotCreatedEvent {
}

message UserJoinedEvent {
    string id = 1;
}

message UserLeftEvent {
    string id = 1;
}

message RoomJoinedEvent {
    string id = 1;
}

message RoomNotJoinedEvent {
}

message RoomLeftEvent {
    string id = 1;
}

message RoomNotLeftEvent {
}

message MessageReceived { 
    string sender_name = 1;
    string data = 2;
}

message MessageSendEvent {
}

message MessageNotSendEvent {
}

message SignalingEvent {
    oneof event {
        
        // Information with all available rooms
        RoomsInfoEvent rooms_info = 1; 

        // Room added by someone
        RoomAddedEvent room_added = 2; 
        // Room removed by the system because it's empty
        RoomRemovedEvent room_removed = 3; 

        // Room created (only the creator receives this event)
        RoomCreatedEvent room_created = 4; 
        // Room not created (only the creator receives this event)
        RoomNotCreatedEvent room_not_created = 5; 
        
        // Someone joined the room
        UserJoinedEvent user_joined = 6;
        // Someone left the room
        UserLeftEvent user_left = 7; 

        // The user who is trying to join has joined (only he receives it)
        RoomJoinedEvent room_joined = 8; 
        // The user who is trying to join has not joined (only he receives it)
        RoomNotJoinedEvent room_not_joined = 9;

        // The user who is trying to leave has leaved (only he receives it)
        RoomLeftEvent room_left = 10; 
        // The user who is trying to leave has not leaved (only he receives it)
        RoomNotLeftEvent room_not_left = 11; 

        // Someone in the room has send message
        MessageReceived message_received = 12; 
        // Someone send message successfully (only he receives it)
        MessageSendEvent message_send = 13; 
        // Someone couldn't send message (only he receives it)
        MessageNotSendEvent message_not_send = 14; 
    }
}